--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -34,14 +34,14 @@
 html {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
 }
-@media (min-width: 48em) {
+@media (min-width: 64em) {
   html {
-    font-size: 16px;
+    font-size: 12px;
   }
 }
-@media (min-width: 58em) {
+@media (min-width: 64em) {
   html {
-    font-size: 20px;
+    font-size: 16px;
   }
 }
 
@@ -79,7 +79,7 @@ html {
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-family: "Abril Fatface", serif;
+  font-family: "PT Sans", serif;
   font-size: 3.25rem;
 }
 
@@ -126,15 +126,15 @@ a.sidebar-nav-item:focus {
   padding-bottom: 4rem;
 }
 
-@media (min-width: 48em) {
+@media (min-width: 72em) {
   .content {
-    max-width: 38rem;
+    max-width: 64rem;
     margin-left: 20rem;
     margin-right: 2rem;
   }
 }
 
-@media (min-width: 64em) {
+@media (min-width: 72em) {
   .content {
     margin-left: 22rem;
     margin-right: 4rem;
